fixed fascist focus locations & added temp localization

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -72,8 +72,8 @@ BOH_the_state_of_the_empire:0 "The State of The Empire"
 BOH_the_state_of_the_empire_desc:0 "The Kaiser's empire has changed drastically since it's inception, it is time to come to terms with this modern world."
 BOH_revitalize_our_industry:0 "Revitalize Our Industry"
 BOH_revitalize_our_industry_desc:0 "Our current situation in terms of land is not the best, but we must make the most of it in terms of industry, to help fund our effort to reunite our lands!"
-BOH_an_ally_in_the_fuhrer:0 "An Ally In The Fuhrer"
-BOH_an_ally_in_the_fuhrer_desc:0 "The Kaiser is weak, we should install him as a constitutional monarch, and side with the far-right area of the political spectrum."
+BOH_support_the_far_right:0 "Support the Far Right"
+BOH_support_the_far_right_desc:0 "The Kaiser is weak, we should move to dissolve the existing government, and side with the far-right area of the political spectrum."
 BOH_gain_influence_in_pomerania:0 "Gain Influence In Pomerania"
 BOH_gain_influence_in_pomerania_desc:0 "In order to retake our lost territory, we must consolidate the land close to us, being DPR of Pomerania. The Kaiser must first gain influence in the DPR so that they will eventually hold an "equal" and "fair" referendum in our favor."
 BOH_move_torwards_the_right:0 "Move Torwards The Right"
@@ -162,8 +162,8 @@ BOH_buy_foreign_artillery:0 "Buy Foreign Artillery"
 BOH_buy_foreign_artillery_desc:0 "We should purchase foreign models of artillery, as it would help in the growth of our army, and it's not that far off from our own artillery models."
 BOH_consolidate_our_power:0 "Consolidate Our Power"
 BOH_consolidate_our_power_desc:0 "The Night of The Long Knives was long ago, and majorly unsuccessful, it is time to commence the second Night of The Long Knives."
-BOH_appoint_loyal_ministers:0 "Appoint Loyal Ministers"
-BOH_appoint_loyal_ministers_desc:0 "In order to consolidate our power, as well as keep the government running smoothly, we need to have officials that are loyal to our government, and our government only."
+BOH_we_decide_our_fate:0 "We decide our fate"
+BOH_we_decide_our_fate_desc:0 "In order to consolidate our power, as well as keep the government running smoothly, we need to have officials that are loyal to our government, and our government only."
 BOH_prepare_for_war_with_pomerania:0 "Prepare For War With Pomerania"
 BOH_prepare_for_war_with_pomerania_desc:0 ""
 BOH_our_own_democratic_sphere:0 "Our Own Democratic Sphere"
