--- a/localisation/dual_leaders_l_english.yml
+++ b/localisation/dual_leaders_l_english.yml
@@ -18,6 +18,10 @@
  ROM_PRIME_MINISTER_TITLE:0 "Prime Minister"
  ROM_MONARCH_TITLE:0 "Monarch"
  ROM_CAROL_II:0 "Carol II"
+ ## Italy stuff
+ ITA_LEADER_TITLE:0 "Il Duce"
+ ITA_MONARCH_TITLE:0 "Monarch"
+ ITA_EMMANUEL_III:0 "Victor Emmanuel III"
  ## Fascist Bavarian stuff
  BAV_CHANCELLOR_TITLE:0 "Chancellor"
  BAV_CHANCELLOR_DESC:0 "Adolf Hitler, Chancellor of the Bavarian Reich, swiftly rose to power after the collapse of the Holy Roman Empire. During the interwar period, he slowly changed Bavaria into an ultra-nationalistic state, turning himelf into the \"sole leader of the German people\"."
