--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -566,11 +566,13 @@ BOH_reorganize_labor_plans:0 "Reorganize Labor Plans"
 BOH_improve_education:0 "Improve our School System"
 BOH_promote_communinism_in_france:0 "Promote Communism in France"
 BOH_worker_strikes_idea:0 "Worker Strikes"
-BOH_com_retake_alsace:0 "Retake Alsace"
+BOH_com_retake_alsace:0 "Liberate French Workers"
 BOH_aid_french_workers:0 "Sympathize with French Workers"
 BOH_idea_reorganized_labor:0 "Reorganized Labor"
 BOH_idea_socialist_education:0 "Socialist Education System"
 BOH_idea_healthcare:0 "Socialist Healthcare System"
+BOH_idea_failing_kaiser:0 "Unpopular Kaiser"
+BOH_idea_support_kaiser:0 "Popular Kaiser"
 BOH_com_healthcare:0 "Improve Healthcare Standards"
 BOH_com_take_russia:0 "Install a Pro-Soviet Government in Russia"
 BOH_revitalize_soviet_sentiments:0 "Rekindle Soviet Sentiments"
