stuffs, and made myself a new repo

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -25,6 +25,9 @@
  BOH_com_east_germany2:0 "East German Socialist Republic"
  BOH_com_east_germany2_DEF:0 "the East German Socialist Republic"
  BOH_com_east_germany2_ADJ:0 "East German"
+ BOH_nazism:0 "Greater Bohemian State"
+ BOH_nazism_DEF:0 "the Greater Bohemian State"
+ BOH_nazism_ADJ:0 "Bohemian"
  BOH_fascism_ADJ:0 "Bohemian"
  BOH_democratic_ADJ:0 "Bohemian"
  BOH_neutrality_ADJ:0 "Bohemian"
@@ -531,6 +534,10 @@ ohe.52.b:0 "We won't go down without a fight!"
 ohe.53.title:0 "Annexation of Austria"
 ohe.53.desc:0 "The Austrian government has agreed to our demand of annexation."
 ohe.53.a:0 "Great!"
+ohe.55.title:0 "The Two Paths"
+ohe.55.desc:0 "It's time to reorganize our government, now that the right wing leaders have been put in power. \n\nSome members of the party think we should ally with the §National Socialists to the Southwest§, saying to agree with their ideas of a superior Arayan state in central Europe. \n\nOn the other hand, many support a continuation of the current fascist government."
+ohe.55.a:0 "The National Socialists are very compelling."
+ohe.55.b:0 "We will not ruin the lives of the people of our lands, they are citizens!"
 BOH_french_intervention:0 "§!§RThis focus may spark §YFrench§R intervention!§!§!§!§!"
 BOH_proclaim_holy_roman_union:0 "§!§RRequires focus §YMarxism-Leninism§!§!§!."
 BOH_proclaim_holy_roman_union2:0 "§!§!You will recieve decisions to integrate §YHoly Roman§! core states§!§!."
