fixed major communist path bug

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -446,8 +446,8 @@ ohe.30.a:0 "Our nations will prosper united!"
 ohe.30.b:0 "We will not surrender our independence!"
 ohe.31.title:0 "Pomerania has agreed!"
 ohe.31.desc:0 "Pomerania agrees that a greater union between our countries will lead to better conditions in both our countries."
-ohe.31.a:0 "Let us declare the §YEast German Socialist Republic§!!"
-ohe.31.b:0 "Let us declare the §YEast German Union§!!"
+ohe.31.a:0 "Great!"
+ohe.31.b:0 "Great!"
 ohe.32.title:0 "Pomerania has declined!"
 ohe.32.desc:0 "Shocking news has arrived from Pomerania. They do not want to form a greater union together."
 ohe.32.a:0 "Mobilize against Pomerania!"
@@ -526,7 +526,8 @@ ohe.50.a:0 "Launch the Prussian Expedition!"
 ohe.50.b:0 "Back down..."
 ohe.51.title:0 "Berlin is under our control!"
 ohe.51.desc:0 "Now that we control Berlin, we can integrate Brandenburg-Pomerania into our country."
-ohe.51.a:0 "Let us declare the §YEast German Workers Union§!!"
+ohe.51.a:0 "Let us declare the §YEast German Socialist Republic§!!"
+ohe.51.b:0 "Let us declare the §YEast German Union§!!"
 ohe.52.title:0 "The [From.Owner.GetName] demands Annexation"
 ohe.52.desc:0 "The [From.Owner.GetAdjective]s demand we lay our arms down and surrender to them peacefully, or else they will invade us."
 ohe.52.a:0 "Better red than dead..."
