--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -61,8 +61,6 @@
  AUS_holy_roman_federation_DEF:0 "the Roman Workers' Republic of the Austria"
  AUS_holy_roman_federation_ADJ:0 "Austrian"
 BOH_purge_opponents_desc:0 "While we did win the civil war, pro-Kaiser resistance groups still operate within our borders. We must find them and stop them from sabotaging our industries, and stop them from potentially trying to overthrow our government."
-BOH_our_doctrine_is_fine:0 "Our Doctrine Is Fine"
-BOH_our_doctrine_is_fine_desc:0 "Other countries like Bavaria have adopted a motorized approach to warfare, but it is just a fad. It is best to improve on our current doctrine, which is bound to come out on top."
 BOH_increase_mountaineer_investment:0 "Increase Mountaineer Investment"
 BOH_increase_mountaineer_investment_desc:0 "Our border with many of our old territories are covered with mountains, it would only make sense for them to be defended with soldiers trained to fight in the cold, harsh climate of the mountains."
 BOH_more_rigorous_training:0 "More Rigorous Training"
@@ -477,8 +475,7 @@ ohe.38.desc:0 "Now that we've conquered our old territories, should we move our 
 ohe.38.a:0 "Prague"
 ohe.38.b:0 "Berlin"
 ohe.38.c:0 "Hamburg"
-ohe.38.d:0 "Munich"
-ohe.38.e:0 "Vienna"
+ohe.38.d:0 "Show me more"
 ohe.39.title:0 "Reassessing our Foreign Policy"
 ohe.39.desc:0 "Our glorious victory over the false warlord states makes us a major power. What we will do next may lead to wars never seen before."
 ohe.39.a:0 "Onward!"
@@ -539,10 +536,22 @@ ohe.55.title:0 "The Two Paths"
 ohe.55.desc:0 "It's time to reorganize our government, now that the right wing leaders have been put in power. \n\nSome members of the party think we should ally with the §National Socialists to the Southwest§, saying to agree with their ideas of a superior Arayan state in central Europe. \n\nOn the other hand, many support a continuation of the current fascist government."
 ohe.55.a:0 "The National Socialists are very compelling."
 ohe.55.b:0 "We will not ruin the lives of the people of our lands, they are citizens!"
+ohe.56.title:0 "Moving our Capital"
+ohe.56.desc:0 "Now that we've conquered our old territories, should we move our capital?"
+ohe.56.a:0 "Munich"
+ohe.56.b:0 "Vienna"
+ohe.56.c:0 "Brussels"
+ohe.56.d:0 "Show me EVEN more"
+ohe.57.title:0 "Moving our Capital"
+ohe.57.desc:0 "Now that we've conquered our old territories, should we move our capital?"
+ohe.57.a:0 "Königsberg"
+ohe.57.b:0 "Stuttgart"
+ohe.57.c:0 "Frankfurt"
+ohe.57.d:0 "Go Back to Start"
 BOH_french_intervention:0 "§!§RThis focus may spark §YFrench§R intervention!§!§!§!§!"
-BOH_proclaim_holy_roman_union:0 "§!§RRequires focus §YMarxism-Leninism§!§!§!."
-BOH_proclaim_holy_roman_union2:0 "§!§!You will recieve decisions to integrate §YHoly Roman§! core states§!§!."
-BOH_proclaim_holy_roman_federation:0 "§!§RRequires focus §YMarxism§!§!§!."
+BOH_proclaim_holy_roman_union:0 "§!§!Requires §YMarxism-Leninism§!§!§!."
+BOH_proclaim_holy_roman_union2:0 "§!§!You will recieve decisions to integrate the warlords§!§!."
+BOH_proclaim_holy_roman_federation:0 "§!§!Requires §YMarxism§!§!§!."
 BOH_proclaim_holy_roman_federation2:0 "§!§RThis focus will release §YHoly Roman§! core states except §YBohemia§!§!§!."
 form_hre_union:0 "Controls all of §YGermany§!, §YBelgium§!, §YLuxemburg§!, and §YAustria§!."
 BOH_purge_opponents_desc:0 "While we did win the civil war, pro-Kaiser resistance groups still operate within our borders. We must find them and stop them from sabotaging our industries, and stop them from potentially trying to overthrow our government."
