Imperial Russia update #1

--- a/localisation/SOV_l_english.yml
+++ b/localisation/SOV_l_english.yml
@@ -15,3 +15,18 @@
  SOV:0 "Russia"
  SOV_DEF:0 "Russia"
  SOV_ADJ:0 "Russian"
+ BLR_russia:0 "Belarusian Governorate"
+ BLR_russia_DEF:0 "the Belarusian Governorate"
+ BLR_russia_ADJ:0 "Belarusian"
+ UKR_russia:0 "Ukrainian Governorate"
+ UKR_russia_DEF:0 "the Ukrainian Governorate"
+ UKR_russia_ADJ:0 "Ukrainian"
+ UBD_russia:0 "Baltic Governorate"
+ UBD_russia_DEF:0 "the Baltic Governorate"
+ UBD_russia_ADJ:0 "Baltic"
+ AZR_russia:0 "Caucasian Governorate"
+ AZR_russia_DEF:0 "the Caucasian Governorate"
+ AZR_russia_ADJ:0 "Caucasian"
+ SOV_russia:0 "Imperial Russia"
+ SOV_russia_DEF:0 "Imperial Russia"
+ SOV_russia_ADJ:0 "Russian"
