working on bohemia

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -329,6 +329,7 @@ BOH_has_marxism:0 "§!§!Your country's name will change to §YWorkers Union of 
 BOH_has_marxism_leninism:0 "§!§!Your country's name will change to §YSocialist Republic of Bohemia§!."
 BOH_com_political_reforms_focus:0 "Political Reforms"
 BOH_reopening_our_economy_focus:0 "Reopen our economy"
+BOH_has_nazism:0 "§!§!Your country's name will change to §YThe Greater Bohemian State§!."
 ohe.1.title:0 "Kaiser Influence"
 ohe.1.desc:0 "The Kaiser is gaining influence in our country! We must put an end to this before it is too late, and his tyranny washes over us like waves again!"
 ohe.1.a:0 "We Must Stop This!"
@@ -548,6 +549,7 @@ ohe.57.a:0 "Königsberg"
 ohe.57.b:0 "Stuttgart"
 ohe.57.c:0 "Frankfurt"
 ohe.57.d:0 "Go Back to Start"
+ohe.58.title:0 "Prague Demands Our Annexation!"
 BOH_french_intervention:0 "§!§RThis focus may spark §YFrench§R intervention!§!§!§!§!"
 BOH_proclaim_holy_roman_union:0 "§!§!Requires §YMarxism-Leninism§!§!§!."
 BOH_proclaim_holy_roman_union2:0 "§!§!You will recieve decisions to integrate the warlords§!§!."
