--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -2645,6 +2645,8 @@
  KUR_haji_baba:0 "Haji Baba"
  KUR_ahmed_barzani:0 "Ahmed Barzani"
  KUR_ihsan_nuri:0 "Ihsan Nuri"
+ BOH_kaiser_influence:0 "Kaiser's Influence"
+ BOH_kaiser_influence_desc:0 "The Kaiser is influencing out people!"
  PRS_gymnastics_and_sports_division:0 "Gymnastics and Sports Division"
  PRS_gymnastics_and_sports_division_desc:0 "The SA have used their previous training as The Gymnastics and Sports Division to increase their effectiveness on the battlefield."
  BOH_a_fragmented_empire:0 "A Fragmented Empire"
