updated monarchist path for bohemia

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -83,8 +83,8 @@ BOH_invest_in_the_local_population:0 "Invest In The Local Population"
 BOH_invest_in_the_local_population_desc:0 "As well as developing the military of our great empire, we should also be developing the civilian industry, it could be used to our advantage later on..."
 BOH_fund_the_prague_arms_company:0 "Fund The Prague Arms Company"
 BOH_fund_the_prague_arms_company_desc:0 "To fund our war effort, we must start investing more in the military portion of our industry."
-BOH_less_radical_socialism:0 "Less Radical Socialism"
-BOH_less_radical_socialism_desc:0 "The radical communists cannot be trusted to run the government. There should be a government run by the people, allowing the Kaiser to be a constitutional monarch."
+BOH_less_radical_socialism:0 "A Consitutional Monarchy"
+BOH_less_radical_socialism_desc:0 "There should be a government run by the people, allowing the Kaiser to be a constitutional monarch."
 BOH_abolish_the_monarchy:0 "Abolish The Monarchy"
 BOH_abolish_the_monarchy_desc:0 "The Kaiser still holds substantial amounts of influence in our country, it is time to abolish the tyrannical monarchy, at all costs!"
 BOH_support_the_pomeranians:0 "Support The Pomeranians"
