MASSIVE CHANGES WHOLE THANG

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -105,6 +105,16 @@ BOH_put_new_officials_in_place:0 "Put New Officials In Place"
 BOH_put_new_officials_in_place_desc:0 "Now that the majority of our political enemies have been "taken care of," we can put supporters of the current regime in place of the purged enemies."
 BOH_look_north:0 "Look North"
 BOH_look_north_desc:0 "The Mackensen Junta is one of the larger warlord territories, but we must strike it while it is weak!"
+BOH_the_kaisers_will:0 "The Kaiser's Will"
+BOH_the_kaisers_will_desc:0 "WIP"
+BOH_subjugate_holland:0 "Subjugate the Netherlands"
+BOH_subjugate_holland_desc:0 "WIP"
+BOH_absolute_power:0 "Absolutism"
+BOH_absolute_power_desc:0 "WIP"
+BOH_an_imperial_empire:0 "Revive the Holy Roman Empire"
+BOH_an_imperial_empire_desc:0 "WIP"
+BOH_deal_with_the_neighbors:0 "Deal with the Neighbors"
+BOH_deal_with_the_neighbors_desc:0 "WIP"
 BOH_invest_into_rural_areas:0 "Invest Into Rural Areas"
 BOH_invest_into_rural_areas_desc:0 "The rural areas of Bohemia are seriously underdeveloped, we should invest a bit more to help create more jobs, and help our industry."
 BOH_appoint_new_military_commanders:0 "Appoint New Military Commanders"
@@ -165,6 +175,14 @@ BOH_consolidate_our_power:0 "Consolidate Our Power"
 BOH_consolidate_our_power_desc:0 "The Night of The Long Knives was long ago, and majorly unsuccessful, it is time to commence the second Night of The Long Knives."
 BOH_we_decide_our_fate:0 "We decide our fate"
 BOH_we_decide_our_fate_desc:0 "In order to consolidate our power, as well as keep the government running smoothly, we need to have officials that are loyal to our government, and our government only."
+BOH_on_our_own:0 "On our own"
+BOH_on_our_own_desc:0 "WIP"
+BOH_ally_with_fuhrer:0 "Ally with the Fuhrer"
+BOH_ally_with_fuhrer_desc:0 "WIP"
+BOH_consolidate_control:0 "Consolidate our Control"
+BOH_consolidate_control_desc:0 "WIP"
+BOH_stop_the_purge:0 "End the Purge"
+BOH_stop_the_purge_desc:0 "WIP"
 BOH_prepare_for_war_with_pomerania:0 "Prepare For War With Pomerania"
 BOH_prepare_for_war_with_pomerania_desc:0 ""
 BOH_our_own_democratic_sphere:0 "Our Own Democratic Sphere"
@@ -240,7 +258,6 @@ BOH_department_of_war_desc:0 "By establishing a centralized department of war, w
 BOH_maximum_planning:0 "Maximum Planning"
 BOH_maximum_planning_desc:0 ""
 BOH_integrate_pomerania:0 "Integrate Pomerania"
-BOH_integrate_bavaria:0 "Integrate Bavaria"
 BOH_integrate_pomerania_desc:0 "Now that the Pomeranian civil war is over, we can now fully reintegrate them back into our glorious empire."
 BOH_governmental_reorganization:0 "Governmental Reorganization"
 BOH_governmental_reorganization_desc:0 "It's time to reorganize our government, now that we've recovered. Some members of the party think we should completely reorganize our government, calling for a more militaristic state. On the other hand, many support a continuation of the current Marxist government."
@@ -329,10 +346,15 @@ BOH_has_marxism:0 "§!§!Your country's name will change to §YWorkers Union of 
 BOH_has_marxism_leninism:0 "§!§!Your country's name will change to §YSocialist Republic of Bohemia§!."
 BOH_com_political_reforms_focus:0 "Political Reforms"
 BOH_reopening_our_economy_focus:0 "Reopen our economy"
+democratic_kaiser_influence:0 "Democratic Influence (Kaiser)"
+democratic_kaiser_influence_desc:0 "The Kaiser, under democratic control, is influencing our people!"
+BOH_kaiser_influence:0 "Kaiser's Influence"
+BOH_kaiser_influence_desc:0 "The Kaiser is influencing our people!"
 BOH_has_nazism:0 "§!§!Your country's name will change to §YThe Greater Bohemian State§!."
 ohe.1.title:0 "Kaiser Influence"
 ohe.1.desc:0 "The Kaiser is gaining influence in our country! We must put an end to this before it is too late, and his tyranny washes over us like waves again!"
 ohe.1.a:0 "We Must Stop This!"
+ohe.1.b:0 "We Must Stop This!"
 ohe.2.title:0 "Demand Annexation"
 ohe.2.desc:0 "The Kaiser has sent our ambassador with a very disturbing premise: We are subjugated by the Kaiser, or there will be war."
 ohe.2.a:0 "We Submit to The Kaiser."
@@ -560,7 +582,7 @@ BOH_purge_opponents_desc:0 "While we did win the civil war, pro-Kaiser resistanc
 BOH_our_doctrine_is_fine:0 "Our Doctrine Is Fine"
 BOH_our_doctrine_is_fine_desc:0 "Other countries like Bavaria have adopted a motorized approach to warfare, but it is just a fad. It is best to improve on our current doctrine, which is bound to come out on top."
 BOH_integrate_bavaria:0 "Integrate Bavaria"
-BOH_integrate_pomerania_desc:0 "Now that the Pomeranian civil war is over, we can now fully reintegrate them back into our glorious empire."
+BOH_integrate_bavaria_desc:0 "Now that the Bavarian civil war is over, we can now fully reintegrate them back into our glorious empire."
 BOH_governmental_reorganization:0 "Governmental Reorganization"
 BOH_bypass_the_rhine:0 "Bypass the Rhine"
 BOH_bypass_the_rhine_desc:0 "Some members of our military staff think we could easily defeat the Rhenish by going around them, through the Netherlands."
@@ -595,10 +617,20 @@ BOH_idea_support_kaiser:0 "Popular Kaiser"
 BOH_com_healthcare:0 "Improve Healthcare Standards"
 BOH_com_take_russia:0 "Install a Pro-Soviet Government in Russia"
 BOH_revitalize_soviet_sentiments:0 "Rekindle Soviet Sentiments"
+BOH_release_republics_decisions:0 "Liberating the Republics"
+BOH_release_republics_decisions_desc:0 "\nThe time has come to liberate the individual republics. It will be an expensive task; however, once we've fully completed it, we will recieve massive benefits to our economy and military."
+BOH_release_rwr_baden:0 "Liberate Baden-Württemberg"
+BOH_release_rwr_bavaria:0 "Liberate Bavaria"
+BOH_release_rwr_prussia:0 "Liberate Prussia"
+BOH_release_rwr_hamburg:0 "Liberate Northern Germany"
+BOH_release_rwr_austria:0 "Liberate Austria"
+BOH_release_rwr_the_rhine:0 "Liberate the Rhineland"
+BOH_release_rwr_switzerland:0 "Liberate Switzerland"
 BOH_integration_decisions:0 "Reintegrating the Republics"
 BOH_integrate_baden:0 "Integrate Baden-Württemberg"
 BOH_integrate_prussia:0 "Integrate Prussia"
 BOH_integrate_hamburg:0 "Integrate Northern Germany"
+BOH_integrate_austria:0 "Integrate Austria"
 BOH_integrate_the_rhine:0 "Integrate the Rhineland"
 BOH_integrate_switzerland:0 "Integrate Switzerland"
 BOH_integrate_savoy:0 "Integrate Savoy"
