Added Russian focus localization & icons

--- a/localisation/SOV_l_english.yml
+++ b/localisation/SOV_l_english.yml
@@ -30,3 +30,20 @@
  SOV_russia:0 "Imperial Russia"
  SOV_russia_DEF:0 "Imperial Russia"
  SOV_russia_ADJ:0 "Russian"
+ 
+ SOV_imperial_tour:0 "Imperial Tour"
+ SOV_imperial_tour_desc:0 "WIP"
+ SOV_visit_kiev:0 "Visit Kiev"
+ SOV_visit_kiev_desc:0 "WIP"
+ SOV_visit_riga:0 "Visit Riga"
+ SOV_visit_riga_desc:0 "WIP"
+ SOV_visit_baku:0 "Visit Baku"
+ SOV_visit_baku_desc:0 "WIP"
+ SOV_visit_minsk:0 "Visit Minsk"
+ SOV_visit_minsk_desc:0 "WIP"
+ SOV_governate_crisis_of_1937:0 "Governorate Crisis of 1937"
+ SOV_governate_crisis_of_1937_desc:0 "WIP"
+ SOV_crisis_solved:0 "Crisis Ressolved"
+ SOV_crisis_solved_desc:0 "WIP"
+ SOV_governate_independence:0 "The Governorates Rebel"
+ SOV_visit_kiev_desc:0 "WIP"
