Started adding rhineland (needs fixing)

--- a/localisation/TRC_l_english.yml
+++ b/localisation/TRC_l_english.yml
@@ -14,3 +14,158 @@
  TRC:0 "Rhineland"
  TRC_DEF:0 "Rhineland"
  TRC_ADJ:0 "West German"
+TRC_the_new_army:0 "The New Army"
+TRC_the_new_army_desc:0 ""
+TRC_start_to_reform_the_rheinparlament:0 "Start to Reform the Rheinparlament"
+TRC_start_to_reform_the_rheinparlament_desc:0 "The Rheinparlament is full of corruption,the best things we can do is to reform the Rheinparlament,making the seats only 355 and crush illegitimate parties"
+TRC_crush_then:0 "Crush then!!"
+TRC_crush_then_desc:0 ""
+TRC_open_negotiations:0 "Open Negotiations"
+TRC_open_negotiations_desc:0 ""
+TRC_invest_in_the_car_indrustry:0 "Invest in the Car Indrustry"
+TRC_invest_in_the_car_indrustry_desc:0 ""
+TRC_the_rheinmarshals_proposal:0 "The Rheinmarshal's proposal"
+TRC_the_rheinmarshals_proposal_desc:0 ""
+TRC_a_military_economy:0 "A military economy"
+TRC_a_military_economy_desc:0 ""
+TRC_dominate_the_rheinparlament:0 "Dominate the Rheinparlament"
+TRC_dominate_the_rheinparlament_desc:0 ""
+TRC_invest_in_military_factories:0 "Invest in Military factories"
+TRC_invest_in_military_factories_desc:0 ""
+TRC_democracy_in_chaos:0 "Democracy in chaos"
+TRC_democracy_in_chaos_desc:0 "For the survival of the country,the survival act has been activated,the act will limit some rights,but elections will be made...."
+TRC_the_armed_forces_of_the_rhine:0 "The Armed forces of the Rhine"
+TRC_the_armed_forces_of_the_rhine_desc:0 ""
+TRC_the_last_hope_of_the_empire:0 "The Last Hope of the Empire"
+TRC_the_last_hope_of_the_empire_desc:0 "We are the only free nation of the post-HRE colapse,we may have some problems with our democracy,but we will stand strong for an democratic Germany"
+TRC_start_to_reform_the_industry:0 "Start to Reform the Industry"
+TRC_start_to_reform_the_industry_desc:0 "If we reform the industry,we will be able to have a foot of the recovery,but we need to give more jobs and invest in our most industrial spot,but make the industry better in parts like Wallonia and Luxemburg"
+TRC_no_reforms:0 "No Reforms!"
+TRC_no_reforms_desc:0 "WE DO NOT NEED REFORMS,we can get thru"
+TRC_adress_the_belgium_issue:0 "Adress the Belgium Issue?"
+TRC_adress_the_belgium_issue_desc:0 "Since the Colapse of the Empire,we have been given Belgium,but these land only are making our country more sick with their independent movements that have only goten stronger...."
+TRC_the_needed_reforms:0 "The Needed Reforms"
+TRC_the_needed_reforms_desc:0 "A Reforms are needed so that our rhine democracy can survive...."
+TRC_start_to_reform_the_army:0 "Start to Reform the Army"
+TRC_start_to_reform_the_army_desc:0 "If we want to be in peace,we must prepare for war,but our army has been seen as weak,but with some reforms,we can make it better..."
+TRC_military_build:0 "Military build"
+TRC_military_build_desc:0 ""
+TRC_invest_in_the_rhineland_factories:0 "Invest in the Rhineland factories"
+TRC_invest_in_the_rhineland_factories_desc:0 ""
+TRC_draw_closer_to_the_west:0 "Draw closer to the West"
+TRC_draw_closer_to_the_west_desc:0 ""
+TRC_form_the_new_high_command:0 "Form the New High Command"
+TRC_form_the_new_high_command_desc:0 ""
+TRC_the_new_prussian_standarts:0 "The New Prussian Standarts"
+TRC_the_new_prussian_standarts_desc:0 ""
+TRC_the_save_the_traditional_act:0 "The "Save the Traditional" act"
+TRC_the_save_the_traditional_act_desc:0 ""
+TRC_the_new_military_state:0 "The New Military State"
+TRC_the_new_military_state_desc:0 ""
+TRC_the_rheinmarshals_victory:0 "The Rheinmarshal's victory"
+TRC_the_rheinmarshals_victory_desc:0 "The Marshal has won the election..."
+TRC_new_trade_deals:0 "New trade Deals"
+TRC_new_trade_deals_desc:0 ""
+TRC_the_1937_elections:0 "The 1937 elections"
+TRC_the_1937_elections_desc:0 "Today,the new election of 1937 made the winner..."
+TRC_the_rndc_victory:0 "The RNDC Victory"
+TRC_the_rndc_victory_desc:0 "The RNDC won the 1937 again..."
+TRC_the_rcc_victory:0 "The RCC Victory"
+TRC_the_rcc_victory_desc:0 "The Rhein Conservative Coalition won the 1937 election..."
+TRC_end_the_reforms:0 "End the Reforms"
+TRC_end_the_reforms_desc:0 ""
+TRC_it_has_to_go:0 "It has to Go"
+TRC_it_has_to_go_desc:0 ""
+TRC_buy_british_tanks:0 "Buy British Tanks"
+TRC_buy_british_tanks_desc:0 ""
+TRC_our_military:0 "Our Military"
+TRC_our_military_desc:0 ""
+TRC_organize_the_rhine_military_guart:0 "Organize the Rhine military guart"
+TRC_organize_the_rhine_military_guart_desc:0 ""
+TRC_the_condem_the_rheinparlament_act:0 "The "Condem The Rheinparlament" act"
+TRC_the_condem_the_rheinparlament_act_desc:0 ""
+TRC_invest_in_belgian_tank_companies:0 "Invest in Belgian Tank Companies"
+TRC_invest_in_belgian_tank_companies_desc:0 ""
+TRC_send_the_military:0 "Send The Military"
+TRC_send_the_military_desc:0 ""
+TRC_the_presidents_proposal:0 "The President's proposal"
+TRC_the_presidents_proposal_desc:0 ""
+TRC_make_more_guns:0 "Make More Guns"
+TRC_make_more_guns_desc:0 ""
+TRC_our_airforce:0 "Our Airforce"
+TRC_our_airforce_desc:0 ""
+TRC_buy_new_fighers:0 "Buy new fighers"
+TRC_buy_new_fighers_desc:0 ""
+TRC_new_ties_to_the_netherlands:0 "New Ties to The Netherlands"
+TRC_new_ties_to_the_netherlands_desc:0 ""
+TRC_buy_naval_planes:0 "Buy naval planes"
+TRC_buy_naval_planes_desc:0 ""
+TRC_the_flanders_dockyarts:0 "The Flanders' Dockyarts"
+TRC_the_flanders_dockyarts_desc:0 ""
+TRC_our_navy:0 "Our Navy"
+TRC_our_navy_desc:0 ""
+TRC_buy_old_french_ships:0 "Buy old French ships"
+TRC_buy_old_french_ships_desc:0 ""
+TRC_better_guns:0 "better guns"
+TRC_better_guns_desc:0 ""
+TRC_new_tacticts:0 "New Tacticts"
+TRC_new_tacticts_desc:0 ""
+TRC_ban_comunist_parties:0 "Ban Comunist parties?"
+TRC_ban_comunist_parties_desc:0 ""
+TRC_the_economy:0 "The Economy"
+TRC_the_economy_desc:0 ""
+TRC_new_road_projects:0 "New Road Projects"
+TRC_new_road_projects_desc:0 ""
+TRC_form_the_belgian_naval_command:0 "Form the Belgian Naval command"
+TRC_form_the_belgian_naval_command_desc:0 ""
+TRC_the_lwenkrieg_tactics:0 "The "Löwenkrieg" Tactics"
+TRC_the_lwenkrieg_tactics_desc:0 ""
+TRC_the_anglorhine_friendship:0 "The Anglo-Rhine Friendship"
+TRC_the_anglorhine_friendship_desc:0 ""
+TRC_make_more_airfields:0 "Make More Airfields"
+TRC_make_more_airfields_desc:0 ""
+TRC_invest_in_our_heart:0 "Invest in our Heart"
+TRC_invest_in_our_heart_desc:0 ""
+TRC_invest_in_new_tractors:0 "Invest in new Tractors"
+TRC_invest_in_new_tractors_desc:0 ""
+TRC_a_new_army:0 "A New Army"
+TRC_a_new_army_desc:0 ""
+TRC_the_old_is_better:0 "The Old is better"
+TRC_the_old_is_better_desc:0 ""
+TRC_the_modern_way:0 "The Modern Way"
+TRC_the_modern_way_desc:0 ""
+TRC_send_the_rheinmarshal:0 "Send the Rheinmarshal"
+TRC_send_the_rheinmarshal_desc:0 ""
+TRC_befriend_the_parlament:0 "Befriend the Parlament"
+TRC_befriend_the_parlament_desc:0 ""
+TRC_agricultural_push:0 "Agricultural push"
+TRC_agricultural_push_desc:0 ""
+TRC_foreign_planes:0 "Foreign planes"
+TRC_foreign_planes_desc:0 ""
+TRC_make_our_own_planes:0 "Make our own Planes"
+TRC_make_our_own_planes_desc:0 ""
+TRC_purge_the_high_command:0 "Purge the High Command"
+TRC_purge_the_high_command_desc:0 ""
+TRC_new_rheinparlament_election_laws:0 "New RheinParlament election laws"
+TRC_new_rheinparlament_election_laws_desc:0 ""
+TRC_new_agricultural_restrictions:0 "New Agricultural Restrictions"
+TRC_new_agricultural_restrictions_desc:0 ""
+TRC_artillery_attacks:0 "Artillery attacks"
+TRC_artillery_attacks_desc:0 ""
+TRC_enact_anticorruption_laws:0 "Enact Anti-corruption laws"
+TRC_enact_anticorruption_laws_desc:0 ""
+TRC_expand_the_reserve:0 "Expand the reserve"
+TRC_expand_the_reserve_desc:0 ""
+TRC_manpower_superiority:0 "Manpower Superiority"
+TRC_manpower_superiority_desc:0 ""
+TRC_a_combined_armor_army:0 "A Combined armor army"
+TRC_a_combined_armor_army_desc:0 ""
+TRC_tanks_alone:0 "Tanks alone"
+TRC_tanks_alone_desc:0 ""
+trc.1.title:0 "The Status of the Rhine"
+trc.1.desc:0 "After the colapse of the Holy Roman Empire,our people had wanted Democracy,It is 1936 now,our Democracy is almost nothing,the nation is in deep economic depresion,we are and too depentent on the west,but there is even a bigger problem that has sicken our gread nation,after the economic depresion,the Flanders-Wallonian Socialist party,the  Wallonian democratic concil for independents and the Flemish Independents movement had only be getting stronger and stronger...."
+trc.2.title:0 "The Belgian Riots"
+trc.2.desc:0 "The Belgian people have never been stronger,the people that want their idependent are no the streets,the police force is no enough,so our great nation needs to do something fast,but the parlament is stuck on a proposed plan for belgium,the 3 choises that the parlament has are to send the military,increase autonomy and make a puppet state of belgium"
+trc.2.a:0 "SEND IN THE ARMY!!!"
+trc.2.b:0 "Start negotiations"
+trc.2.c:0 "Increase the autonomy"
