fixed all rhine focuses not showing

--- a/localisation/TRC_l_english.yml
+++ b/localisation/TRC_l_english.yml
@@ -42,7 +42,7 @@ TRC_start_to_reform_the_industry:0 "Start to Reform the Industry"
 TRC_start_to_reform_the_industry_desc:0 "If we reform the industry,we will be able to have a foot of the recovery,but we need to give more jobs and invest in our most industrial spot,but make the industry better in parts like Wallonia and Luxemburg"
 TRC_no_reforms:0 "No Reforms!"
 TRC_no_reforms_desc:0 "WE DO NOT NEED REFORMS,we can get thru"
-TRC_adress_the_belgium_issue:0 "Adress the Belgium Issue?"
+TRC_adress_the_belgium_issue:0 "Address the Belgian Issue?"
 TRC_adress_the_belgium_issue_desc:0 "Since the Colapse of the Empire,we have been given Belgium,but these land only are making our country more sick with their independent movements that have only goten stronger...."
 TRC_the_needed_reforms:0 "The Needed Reforms"
 TRC_the_needed_reforms_desc:0 "A Reforms are needed so that our rhine democracy can survive...."
@@ -56,7 +56,7 @@ TRC_draw_closer_to_the_west:0 "Draw closer to the West"
 TRC_draw_closer_to_the_west_desc:0 ""
 TRC_form_the_new_high_command:0 "Form the New High Command"
 TRC_form_the_new_high_command_desc:0 ""
-TRC_the_new_prussian_standarts:0 "The New Prussian Standarts"
+TRC_the_new_prussian_standarts:0 "The New Prussian Standards"
 TRC_the_new_prussian_standarts_desc:0 ""
 TRC_the_save_the_traditional_act:0 "The "Save the Traditional" act"
 TRC_the_save_the_traditional_act_desc:0 ""
