fixed some issues with rhine

--- a/localisation/TRC_l_english.yml
+++ b/localisation/TRC_l_english.yml
@@ -146,7 +146,7 @@ TRC_make_our_own_planes:0 "Make our own Planes"
 TRC_make_our_own_planes_desc:0 ""
 TRC_purge_the_high_command:0 "Purge the High Command"
 TRC_purge_the_high_command_desc:0 ""
-TRC_new_rheinparlament_election_laws:0 "New RheinParlament election laws"
+TRC_new_rheinparlament_election_laws:0 "Parliamentary Elections"
 TRC_new_rheinparlament_election_laws_desc:0 ""
 TRC_new_agricultural_restrictions:0 "New Agricultural Restrictions"
 TRC_new_agricultural_restrictions_desc:0 ""
