fixed communist party names

--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -703,10 +703,12 @@
  BOH_fascism_party_long:0 "Bohemian National Fascist Party"
  BOH_democratic_party:0 "BDSP"
  BOH_democratic_party_long:0 "Bohemian Democratic Socialist Party"
- BOH_marxism_party:0 "BSWP"
+ BOH_marxism_party:0 "Socialist Workers Party"
  BOH_marxism_party_long:0 "Socialist Workers Party of Bohemia"
- BOH_communism_party:0 "RUCP"
- BOH_communism_party_long:0 "Roman Union Communist Party"
+ BOH_marxism_leninism_party:0 "Roman Workers Union Party"
+ BOH_marxism_leninism_party_long:0 "Roman Workers Union Party"
+ BOH_communism_party:0 "CCB"
+ BOH_communism_party_long:0 "Communist Council of Bohemia"
  NTE_neutrality_party:0 "Military Junta"
  NTE_neutrality_party_long:0 "Mackensen's Military Junta"
  NTE_democratic_party:0 "NGLP"
