Polishing communist focuses

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -576,7 +576,7 @@ BOH_french_intervention:0 "§!§RThis focus may spark §YFrench§R intervention!
 BOH_proclaim_holy_roman_union:0 "§!§!Requires §YMarxism-Leninism§!§!§!."
 BOH_proclaim_holy_roman_union2:0 "§!§!You will recieve decisions to integrate the warlords§!§!."
 BOH_proclaim_holy_roman_federation:0 "§!§!Requires §YMarxism§!§!§!."
-BOH_proclaim_holy_roman_federation2:0 "§!§RThis focus will release §YHoly Roman§! core states except §YBohemia§!§!§!."
+BOH_proclaim_holy_roman_federation2:0 "§!§!You will recieve decisions to puppet the warlords§!§!."
 form_hre_union:0 "Controls all of §YGermany§!, §YBelgium§!, §YLuxemburg§!, and §YAustria§!."
 BOH_purge_opponents_desc:0 "While we did win the civil war, pro-Kaiser resistance groups still operate within our borders. We must find them and stop them from sabotaging our industries, and stop them from potentially trying to overthrow our government."
 BOH_our_doctrine_is_fine:0 "Our Doctrine Is Fine"
