Added some events for russia

--- a/localisation/SOV_l_english.yml
+++ b/localisation/SOV_l_english.yml
@@ -47,3 +47,25 @@
  SOV_crisis_solved_desc:0 "WIP"
  SOV_governate_independence:0 "The Governorates Rebel"
  SOV_visit_kiev_desc:0 "WIP"
+ rus.1.title:0 "A Trip to Kiev?"
+ rus.1.desc:0 "Over the past couple of weeks, Kiril has been bombarded with reports of civil unrest in Ukraine. Perhaps Kiril could travel to Kiev and sort this issue out?"
+ rus.1.a:0 "Plan the trip."
+ rus.1.b:0 "We can't risk it."
+ rus.2.title:0 "A Trip to Minsk?"
+ rus.2.desc:0 "Tensions in the governorates didn't spare Belarus. Over the past year or so, the unrest has spread from the Baltic and Ukrianian governorates. While the majority of Belarusians do not mind our government, this is still a problem we must deal with."
+ rus.2.a:0 "Plan the trip."
+ rus.2.b:0 "We can't risk it."
+ rus.3.title:0 "A Trip to Riga?"
+ rus.3.desc:0 "Since the collapse of the HRE in the early 1910s, the Baltic states have been a torn in our control. It seems as if every year some rebels in the Baltics cause some sort of problem for us. If we wish to truly solve our issues with them, we might want to look into planning a trip to Riga."
+ rus.3.a:0 "Plan the trip."
+ rus.3.b:0 "We can't risk it."
+ rus.4.title:0 "A Trip to Baku?"
+ rus.4.desc:0 "The caucasus governorate is our smallest governorate. However, it is one our most problematic governorates. Communist terror attacks occur almost monthly and we spend a lot of money on intellegence there. Sending Kiril there will require extensive preparations, and might not be the best for his safety."
+ rus.4.a:0 "Kiril wants to go, regardless of the risks."
+ rus.4.b:0 "We can't risk it."
+ rus.5.title:0 "The Russian Governorate Crisis of 1937"
+ rus.5.desc:0 "We have failed to quell unrest in the governorates."
+ rus.5.a:0 "Ready the military on the borders."
+ rus.13.title:0 "The Russian Governorate Crisis of 1937"
+ rus.13.desc:0 "We have successfully avoided the collapse our empire!"
+ rus.13.a:0 "Kiril has saved us!"
