updated russian events

--- a/localisation/SOV_l_english.yml
+++ b/localisation/SOV_l_english.yml
@@ -67,5 +67,5 @@
  rus.5.desc:0 "We have failed to quell unrest in the governorates."
  rus.5.a:0 "Ready the military on the borders."
  rus.13.title:0 "The Russian Governorate Crisis of 1937"
- rus.13.desc:0 "We have successfully avoided the collapse our empire!"
+ rus.13.desc:0 "We have successfully avoided the collapse of our empire!"
  rus.13.a:0 "Kiril has saved us!"
